-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
Windows
-
51e55578f3914a969daaab4ddc8ba3981a9c8184 (qttools/dev, 18.12.2014, 5.5)
plugins/qtwebengine/ffmpegsumo.dll isn't copied by windeployqt.
Also "qtwebengine_locales" folder is copied to wrong location. It should be under "translations".
Steps to reproduce:
- Open "Webengine Fancy Browser" example and compile
- Copy fancybrowser.exe to a clean folder
- Run "windeployqt fancybrowser.exe" from command line
- Create a file qt.conf in the same directory
[Paths]
Prefix=. - Run fancybrowser.exe
See the debug.log:
[1215/102213:WARNING:resource_bundle.cc(286)] locale_file_path.empty()
[1215/102213:WARNING:resource_bundle.cc(286)] locale_file_path.empty()
Solution:
- Move qtwebengine_locales to translations/qtwebengine_locales
- Copy %QTDIR%/plugins/qtwebengine/ffmpegsumo.dll to plugins/qtwebengine/ffmpegsumo.dll
- relates to
-
QTBUG-42083 WebEngine deployment issue on Windows
-
- Closed
-
-
QTBUG-43348 ffmpegsumo.dll has dependency for debug library MSVCR120D.dll
-
- Closed
-
| For Gerrit Dashboard: QTBUG-43351 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 102333,2 | windeployqt: Put translations into subdirectory 'translations'. | 5.4 | qt/qttools | Status: ABANDONED | 0 | 0 |
| 102346,2 | windeployqt: Put translations into subdirectory "translations". | dev | qt/qttools | Status: MERGED | +2 | 0 |