windeployqt: Put translations into subdirectory "translations".

Add translationsDirectory member variable defaulting to
target + "/translations" (matching the default location of
qt.conf) to options and put Qt's and WebEngine's
translations there.

[ChangeLog][Important behavior changes][windeployqt]
windeployqt now puts translations into subdirectory "translations".

Task-number: QTBUG-43351
Change-Id: Ib1173f9dd7ca029d9dcb58c89a53bba43b22ec99
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>